[package]
name = "msg_enc_dec"
version = "1.0.26"
description = "Use SSH keys, Ed22519, X25519 and GCM to encrypt and decrypt messages and files for communication"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/msg_enc_dec"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "ready-for-use", "rustlang"]
# allowed categories are listed here <https://crates.io/category_slugs>
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.3"
time = {version="0.3.44", features=["macros","local-offset"]}

thiserror = "2.0.17"
anyhow="1.0.100"
reqwest={version="0.12.24", default-features = false, features=["json","blocking", "rustls-tls"]}
serde ={ version= "1.0.228", features=["std","derive"]}
serde_json = "1.0.145"
ssh-key = { version = "0.6.7", features = [ "rsa", "encryption"] }
ssh_agent_client_rs_git_bash = "0.0.19"
rsa = { version = "0.9.8", features = ["sha2"] }
zeroize = {version="1.8.2", features=["derive"]}
aes-gcm = "0.10.3"
camino = "1.2.1"
base64ct = {version = "1.8.0", features = ["alloc"] }
secrecy = "0.10.3"
crossplatform_path="4.0.1"
x25519-dalek={ version = "2.0.1", features=["getrandom","static_secrets"]}
dialoguer ={version= "0.12.0", features=["password"]}
